# keepitfresh

./: .bumpversion.cfg  .coveragerc_unix  .coveragerc_windows  .gitignore  .pylintrc  .travis.yml  CHANGELOG.md  README.md  README.rst  keepitfresh.py  setup.cfg  setup.py  test_keepitfresh.py  tox.ini
docs/: Makefile  conf.py  index.rst  make.bat
keepitfresh/: __init__.py  updater.py
tests/: test_updater.py
