[metadata]
name = keepitfresh
version = 0.2.0
description = A simpler way to freshen up your frozen applications.
long_description = file: README.rst
author = Daniel Nunes
author_email = daniel.henri.nunes@gmail.com
url = https://github.com/GandaG/keepitfresh
classifiers =
    ; complete classifier list: http://pypi.python.org/pypi?%3Aaction=list_classifiers
	Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: Apache Software License
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries
keywords =
    installer
	updater
	frozen
	application
license = Apache 2.0

[options]
zip_safe = False
packages = find:
install_requires =
    packaging
    patool

[bdist_wheel]
universal = 0
